--- a/src/assets/comm.sass
+++ b/src/assets/comm.sass
@@ -5,3 +5,9 @@
 @mixin border-radius($val: 0px)
   border-radius: $val
   -webkit-border-radius: $val
+@mixin flex-grow($val: 1)
+  flex-grow: $val
+  -webkit-flex-grow: $val
+@mixin align-self($val: none)
+  align-self: $val
+  -webkit-align-self: $val
