--- a/src/assets/comm.sass
+++ b/src/assets/comm.sass
@@ -1,13 +1,15 @@
-@mixin flex($val: justify-content)
+@mixin flex($val: flex-start)
   display: flex
   display: -webkit-flex
   justify-content: $val
+  -webkit-justify-content: $val
 @mixin border-radius($val: 0px)
   border-radius: $val
   -webkit-border-radius: $val
 @mixin flex-grow($val: 1)
   flex-grow: $val
   -webkit-flex-grow: $val
+  width: 0px
 @mixin align-self($val: none)
   align-self: $val
   -webkit-align-self: $val
