--- a/src/assets/comm.sass
+++ b/src/assets/comm.sass
@@ -10,6 +10,6 @@
   flex-grow: $val
   -webkit-flex-grow: $val
   width: 0px
-@mixin align-self($val: none)
-  align-self: $val
-  -webkit-align-self: $val
+@mixin align-items($val: none)
+  align-items: $val
+  -webkit-align-items: $val
