--- a/src/assets/comm.sass
+++ b/src/assets/comm.sass
@@ -13,3 +13,6 @@
 @mixin align-items($val: none)
   align-items: $val
   -webkit-align-items: $val
+@mixin flex-direction($val: row)
+  flex-direction: $val
+  -webkit-flex-direction: $val
